# riot-exercises

./: .gitignore  README.md
.github/workflows/: build.yml
00-getting-started/: README.md
00-start/: README.md
01-hallo-welt/: Makefile  README.md  main.c
01-hello-world/: Makefile  README.md  main.c
02-timer/: Makefile  README.md  main.c
02-timers/: Makefile  README.md  main.c
03-shell/: Makefile  README.md
04-saul/: Makefile  README.md  main.c
05-gpios/: Makefile  README.md  main.c
06-threads/: Makefile  README.md
07-events/: Makefile  README.md
08-coap-basic/: Makefile  README.md  client.c
08-coap-basic/.app/: Makefile  README.md  main.c  server.c
09-netapi/: Makefile  README.md  main.c
10-sock/: Makefile  README.md  main.c
11-ble-peripheral/: Makefile  README.md  main.c
12-ble-central/: Makefile  README.md  main.c
13-GNRC-basic/: README.md
13-gnrc-basic/: Makefile  README.md  main.c
14-gnrc-rpl/: Makefile  README.md  main.c
rust01-hello-world/: Cargo.toml  Makefile  README.md
rust01-hello-world/src/: lib.rs
rust02-timers/: Cargo.toml  Makefile  README.md
rust02-timers/src/: lib.rs
rust03-shell/: Cargo.toml  Makefile  README.md
rust03-shell/src/: lib.rs
rust04-saul/: Cargo.toml  Makefile  README.md
rust04-saul/src/: lib.rs
rust05-gpio/: Cargo.toml  Makefile  README.md
rust05-gpio/src/: lib.rs
rust06-threads/: Cargo.toml  Makefile  README.md
rust06-threads/src/: lib.rs
